--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = "~=3.12.0"
 dependencies = [
     "homeassistant==2024.4.0",
+    "pre-commit>=4.2.0",
     "pyadtpulse>=1.2.9",
 ]
 
