--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hass-adtpulse"
 version = "0.4.6"
 description = "Home Assistant integration for ADT Pulse"
 readme = "README.md"
-requires-python = "~=3.12.0"
+requires-python = "==3.13.2"
 dependencies = [
     "homeassistant==2024.4.0",
     "pre-commit>=4.2.0",
