--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Home Assistant integration for ADT Pulse"
 readme = "README.md"
 requires-python = "==3.13.2"
 dependencies = [
-    "homeassistant==2025.8.0",
+    "homeassistant>=2025.8.0",
     "pre-commit>=4.2.0",
     "pyadtpulse>=1.2.11",
 ]
