--- a/custom_components/adtpulse/manifest.json
+++ b/custom_components/adtpulse/manifest.json
@@ -1,7 +1,10 @@
 {
     "domain": "adtpulse",
     "name": "ADT Pulse",
-    "codeowners": ["@homeassistant-projects", "@rlippmann"],
+    "codeowners": [
+        "@homeassistant-projects",
+        "@evworth"
+    ],
     "config_flow": true,
     "dependencies": [],
     "documentation": "https://github.com/homeassistant-projects/hass-adtpulse/",
@@ -11,5 +14,5 @@
     "requirements": [
         "pyadtpulse>=1.2.11"
     ],
-    "version": "0.4.8"
+    "version": "0.5.0"
 }
