update .vscode settings defaults

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+    "git.autofetch": true,
+    "python.createEnvironment.trigger": "off",
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "always",
+    },
     "python.terminal.activateEnvInCurrentTerminal": true,
-    "python.analysis.typeCheckingMode": "basic",
 }
